fixed numpad dark mode highlight

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -471,6 +471,10 @@ button {
     background-color: white;
 }
 
+.dark-theme .number-selected {
+    background-color: lightgrey;
+}
+
 .dark-theme .time{
     color: white;
 }
